Termino los botones de login de twitter y facebook

--- a/index.html
+++ b/index.html
@@ -60,19 +60,17 @@
 		<script src="js/lungo.js"></script>
 
 		<!-- Other dependencies -->
-		<script src="js/events.js"></script>
+		<script src="js/LungoController.js"></script>
+		<script src="js/config.js"></script>
+		<script src="js/utils.js"></script>
 		<script src="js/jsOAuth.min.js"></script>
 		<script src="js/childbrowser.js"></script>
 		<script src="js/TwitterController.js"></script>
 
-		<script src="js/cdv-plugin-fb-connect.js"></script>
-		<script src="js/auth.js"></script>
-		<script src="js/facebook-js-sdk.js"></script>
-		<script src="js/FacebookController.js"></script>
-		
 		<!-- Cordova dependencies -->
 		<script src="cordova.js"></script>
 		<script src="js/CordovaController.js"></script>
+		<script src="js/faceGap-1.0.js"></script>
 
 		<!-- LungoJS - Sandbox App -->
 		<script>
