--- a/static/sections/login.html
+++ b/static/sections/login.html
@@ -17,7 +17,7 @@
 						<a id="loginTwitter" class="button anchor" data-label="Twitter" data-action="loading"></a>
 					</div>
 					<div data-layout="primary">
-						<button class="anchor margin-bottom" data-label="Facebook"></button>
+						<a id="loginFacebook" class="button anchor" data-label="Facebook" data-action="loading"></a>
 					</div>
 				</div>
 			</div>
